# smart_console_adapter

./: .env  .gitignore  .pylintrc  Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build.yml
smart_console_adapter/: README.md  main.py  pyproject.toml  requirements.txt
smart_console_adapter/adapters/: smart_console_adapter.py
smart_console_adapter/decorators/: extract_session_id.py
smart_console_adapter/models/: request_models.py
smart_console_adapter/smart_console_adapter/: main.py
smart_console_adapter/smart_console_adapter/adapters/: smart_console_adapter.py
smart_console_adapter/smart_console_adapter/config/: settings.py
smart_console_adapter/smart_console_adapter/decorators/: extract_session_id
smart_console_adapter/smart_console_adapter/models/: request_models.py
smart_console_adapter/src/: main.py
smart_console_adapter/src/adapters/: smart_console_adapter.py
smart_console_adapter/src/config/: settings.py
smart_console_adapter/src/models/: request_models.py  response_models.py
smart_console_adapter/src/routers/: api.py
