[tool.poetry]
name = "smart_console_adapter"
version = "0.1.0"
description = "A FastAPI application that acts as an adapter to Checkpoint's Smart Console API."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"