[tool.poetry]
name = "smart_console_adapter"
version = "0.1.0"
description = "A FastAPI application that acts as an adapter to Checkpoint's Smart Console API."
authors = ["Noam Bergauz <bergauznoam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = ">=2.7.0"
httpx = "^0.24.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"